--- a/_config.yml
+++ b/_config.yml
@@ -22,9 +22,9 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Bingzhe Zhang"
+  name             : "Bingzhe Zhang（张秉哲）"
   pronouns         : # example: "she/her"  
-  bio              : "Keep doing"
+  bio              : #"Keep doing"
   location         : #"Earth"
   employer         : #"Red Brick University"
   uri              : # URL
