--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,8 @@ author:
   # Biographic information
   avatar           : "profile.png"
   name             : "Bingzhe Zhang（张秉哲）"
-  pronouns         : # example: "she/her"  
-  bio              : #"Keep doing"
+  pronouns         : "he/him"  
+  bio              : "Keep doing"
   location         : #"Earth"
   employer         : #"Red Brick University"
   uri              : # URL
