--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,20 +3,20 @@ main:
   - title: "Publications"
     url: /publications/
 
- # - title: "Talks"
- #   url: /talks/    
+  - title: "Research"
+    url: /talks/    
 
- # - title: "Teaching"
- #   url: /teaching/    
+  - title: "Projects"
+    url: /teaching/    
     
- # - title: "Portfolio"
- #   url: /portfolio/
+  - title: "News"
+    url: /portfolio/
         
  # - title: "Blog Posts"
  #   url: /year-archive/
     
- # - title: "CV"
- #   url: /cv/
+  - title: "CV"
+    url: /cv/
     
  # - title: "Guide"
  #   url: /markdown/
