--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   location         : #"Earth"
   employer         : #"Red Brick University"
   uri              : # URL
-  email            : "zhangbz@seu.edu.cn" 
+  email            : "zbzseu@foxmail.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
