--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@ main:
   - title: "Research"
     url: /talks/    
 
-  - title: "Projects"
+  - title: "Project"
     url: /teaching/    
     
   - title: "News"
