--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Bingzhe Zhang（张秉哲）"
   pronouns         : #"he/him"  
-  bio              : "Keep doing"
+  bio              : "Keep doing!"
   location         : #"Earth"
   employer         : #"Red Brick University"
   uri              : # URL
