--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "bingzhe-zhang-12b24024a"
+  linkedin         : "linkedin.com/in/bingzhe-zhang-ph-d-12b24024a"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
