--- a/_config.yml
+++ b/_config.yml
@@ -71,6 +71,7 @@ author:
   xing             : # Username
   youtube          : # Username
   zhihu            : # URL
+  google_analytics : G-8T4ZVYCW4J
 
 
 # Site Settings
