--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,10 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Bingzhe Zhang / Personal Website"
+title                    : "Bingzhe Zhang"
 title_separator          : "-"
-name                     : &name "Bingzhe Zhang"
-description              : &description "personal description"
+name                     : "Bingzhe Zhang"
+description              : "Structural Dynamics and Data-driven Modeling"
 url                      : https://bingzhezhang.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
