--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Bingzhe Zhang"
+title                    : "Bingzhe Zhang / Personal Website"
 title_separator          : "-"
 name                     : "Bingzhe Zhang"
 description              : "Structural Dynamics and Data-driven Modeling"
